# WEB-HW-10

web10hw/: pyproject.toml
web10hw/webhw10/: manage.py
web10hw/webhw10/super_quotes/: apps.py  forms.py  models.py  urls.py  utils.py  views.py
web10hw/webhw10/super_quotes/migrations/: 0001_initial.py  0002_auto_20230713_0113.py  0003_author_created_at.py  0004_auto_20230713_0148.py
web10hw/webhw10/super_quotes/static/super_quotes/: style.css
web10hw/webhw10/super_quotes/templates/super_quotes/: add_quote.html  add_tag.html  author.html  base.html  find_tag.html
web10hw/webhw10/super_quotes/templatetags/: extract.py
web10hw/webhw10/users/: forms.py  urls.py  views.py
web10hw/webhw10/users/templates/users/: logout.html  signin.html  signup.html
web10hw/webhw10/utils/: add_quotes_to_mongo.py  authors.json  migration.py  quotes.json
web10hw/webhw10/webhw10/: asgi.py  settings.py  urls.py  wsgi.py
